-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.3.1, 6.4.0
Objects are drawn fine with QSG_RHI_BACKEND: opengl.
However, the same code with "d3d11" produces a different result (wrong aspect ratio, no lines) and the error message below.
Failed to create input layout: Error 0x80070057: ??????????????? Qt3D.Renderer.RHI.Backend: Failed to build graphics pipeline: Creation Failed
The sample code Qtbug106082.zip
is attached.
Build and run.
Switch between opengl/d3d11 in main.cpp.
| For Gerrit Dashboard: QTBUG-106082 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 439148,5 | QRhi: Allow negative viewport origin | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 439463,2 | QRhi: Allow negative viewport origin | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |