QRhi: Allow negative viewport origin

Do not bound viewport rect to surface size, only scirror rect.
Modifying the viewport will move the view origin changing the
way the scene gets rendered.

Task-number: QTBUG-106082
Change-Id: I105516bd460af87727d0e73f580b8cf6b748d87f
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit d46ad528727772362b710d68c27d963db81235c4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>